tests/models/enum/named/u8/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: u8
    },
}
fn main() {}
